setting up slides for compounding, converting to v2

--- a/compounding/compounding-1.html
+++ b/compounding/compounding-1.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>Time Value of Money - Basics</title>
+    <title>TVM - Compounding</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="offset-5 col-4 offset-md-6">
                     <a type="button" class="hide btn"></a>
-                    <a type="button" class="btn start" href="basics-2.html">Start!</a>
+                    <a type="button" class="btn start" href="compounding-2.html">Start!</a>
                 </div>
             </div>
         </div>
