--- a/compounding/compounding-2.html
+++ b/compounding/compounding-2.html
@@ -11,71 +11,73 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 2: Compound Interest</title>
+    <title>TVM - Compounding</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        
 
-            <!---------------- SLIDE 2, Content  *************** -->
-            <div id="slide2" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Introduction</h3>
-                    </div>
+        <!---------------- SLIDE 2, Content  *************** -->
+        <div id="" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Compound Interest</h2>
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <!-- slide 2, initial state defaults to intro button -->
-                        <div class="content">
-                            <div id="intro2">
-                                <h3>Introduction</h3>
-                                <p>In Part 1 of the Time Value of Money tutorial, you learned about the general format of the TVM equation. To make it easier to grasp the basic concepts, we overlooked one very important factor... something that increases the growth of investments and is very common in the real world.</p>
-                                <p>We ignored compounding!</p>
-                                <p>In TVM Part 2, we'll introduce compound interest into the TVM equation.</p>
-                            </div>
-                            <div id="learningObj2">
-                                <h3>Learning Objectives</h3>
-                                <p>By the end of this tutorial, you will:
-                                    <ul>
-                                        <li>Understand the concept of compounded interest</li>
-                                        <li>Convert stated (nominal) interest to actual interest</li>
-                                        <li>Memorize the general format of the TVM equation with compounding</li>
-                                        <li>Identify the variable in a word problem so you can use them in the TVM equation</li>
-                                        <li>Solve the equation for any unknown variable</li>
-                                    </ul>
-                                </p>
-                            </div>
-                            <div id="requirements2">
-                                <h3>Requirements</h3>
-                                <p>To complete this tutorial, you will need:
-                                    <ul>
-                                        <li>A background in the basics of Time Value of Money or completion of the TVM1 tutorial</li>
-                                        <li>Basic algebra skills</li>
-                                        <li>Scratch paper and pencil or pen</li>
-                                        <li>A calculator <span class="note">(optional: a financial calculator)</span></li>
-                                    </ul>
-                                </p>
-                                <p>TVM may required you to use math skills you haven't used in a while. <b>Please contact your instructor if you need additional help!</b></p>
-                                <p>Once you have everything you need, let’s get started!</p>
-                            </div>
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <div id="intro2">
+                            <h3>Introduction</h3>
+                            <p>In Part 1 of the Time Value of Money tutorial, you learned about the general format of the TVM equation. To make it easier to grasp the basic concepts, we overlooked one very important factor... something that increases the growth of investments and is very common in the real world.</p>
+                            <p>We ignored compounding!</p>
+                            <p>In TVM Part 2, we'll introduce compound interest into the TVM equation.</p>
+                        </div>
+                        <div id="learningObj2">
+                            <h3>Learning Objectives</h3>
+                            <p>By the end of this tutorial, you will:
+                                <ul>
+                                    <li>Understand the concept of compounded interest</li>
+                                    <li>Convert stated (nominal) interest to actual interest</li>
+                                    <li>Memorize the general format of the TVM equation with compounding</li>
+                                    <li>Identify the variable in a word problem so you can use them in the TVM equation</li>
+                                    <li>Solve the equation for any unknown variable</li>
+                                </ul>
+                            </p>
+                        </div>
+                        <div id="requirements2">
+                            <h3>Requirements</h3>
+                            <p>To complete this tutorial, you will need:
+                                <ul>
+                                    <li>A background in the basics of Time Value of Money or completion of the TVM1 tutorial</li>
+                                    <li>Basic algebra skills</li>
+                                    <li>Scratch paper and pencil or pen</li>
+                                    <li>A calculator <span class="note">(optional: a financial calculator)</span></li>
+                                </ul>
+                            </p>
+                            <p>TVM may required you to use math skills you haven't used in a while. <b>Please contact your instructor if you need additional help!</b></p>
+                            <p>Once you have everything you need, let’s get started!</p>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</button>
-                        <button type="button" class="continue btn">Continue</button>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number"></div>
                 </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">2</div>
-                    </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="compounding-1.html">Back</a>
+                    <a type="button" class="btn" href="compounding-3.html">Continue</a>
                 </div>
             </div>
+        </div>
 
     </div> <!--  end of container -->
 
@@ -85,7 +87,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm2-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
