--- a/compounding/compounding-6.html
+++ b/compounding/compounding-6.html
@@ -11,50 +11,52 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 2: Compound Interest</title>
+    <title>TVM - Compounding</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        
 
-
-            <!----------------  SLIDE 6 - Content ****************** -->
-            <div id="slide6" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Compound vs. Simple Interest</h3>
-                    </div>
+        <!----------------  SLIDE 6 - Content ****************** -->
+        <div id="" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Compound Interest</h2>
+                    <!-- <h3 class="secondary-title">Compound vs. Simple Interest</h3> -->
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>Comparing the results of a 2-year investment with simple or annually compounded interest, you'll note that Future Value is higher ($120 to $121) with compounding.</p>
-                            <div class="bottom-space">
-                                <p>
-                                    <h3>Simple Interest</h3>
-                                    <img src="./images/tvm2_simple_interest_timeline.png" class="img-fluid " alt="">
-                                </p><br>
-                                <h3>Compound Interest</h3>
-                                <p><img src="./images/tvm2_annual_interest_timeline_compounding_shown.png" class="img-fluid " alt=""></p>
-                            </div>
-                            <p>Compound interest grows an investment more quickly and results in a higher Future Value (FV). Moreover, the more frequently interest is compounded, the faster the growth and the higher the FV.</p>
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>Comparing the results of a 2-year investment with simple or annually compounded interest, you'll note that Future Value is higher ($120 to $121) with compounding.</p>
+                        <div class="bottom-space">
+                            <p>
+                                <h3>Simple Interest</h3>
+                                <img src="./images/tvm2_simple_interest_timeline.png" class="img-fluid " alt="">
+                            </p><br>
+                            <h3>Compound Interest</h3>
+                            <p><img src="./images/tvm2_annual_interest_timeline_compounding_shown.png" class="img-fluid " alt=""></p>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</button>
-                        <button type="button" class="continue btn">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">6</div>
+                        <p>Compound interest grows an investment more quickly and results in a higher Future Value (FV). Moreover, the more frequently interest is compounded, the faster the growth and the higher the FV.</p>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number"></div>
+                </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="compounding-5.html">Back</a>
+                    <a type="button" class="btn" href="compounding-7.html">Continue</a>
+                </div>
+            </div>
+        </div>
 
 
     </div> <!--  end of container -->
@@ -65,7 +67,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm2-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
