--- a/compounding/compounding-4.html
+++ b/compounding/compounding-4.html
@@ -11,54 +11,55 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 2: Compound Interest</title>
+    <title>TVM - Compounding</title>
 </head>
 
 <body>
     <div class="container-fluid">
-       
 
-
-            <!---------------- SLIDE 4, content -------------------------->
-            <div id="slide4" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Compound vs. Simple Interest</h3>
-                    </div>
+        <!---------------- SLIDE 4, content -------------------------->
+        <div id="slide4" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Compound Interest</h2>
+                    <!-- <h3 class="secondary-title">Compound vs. Simple Interest</h3> -->
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>In the basic form of the equation, we made an assumption about interest. Use this example for our equation:</p>
-                            <p class="question">"How much money would you have in 1 year if you invested $100 at a rate of 10%?"</p>
-                            <p>This results in $110. After two years, we calculate the investment would grow to $121. The timeline of events looks like this:
-                                <div class="bottom-space">
-                                    <img src="./images/tvm2_annual_interest_timeline.png" alt="" class="img-fluid ">
-                                </div>
-                            </p>
-                            <p>The basic equation assumes that interest is compounded annually. In other words, interest is paid at the end of each rather than as one lump sum at the end of the 2-year term.
-                                <div class="bottom-space">
-                                    <img src="./images/tvm2_annual_interest_timeline_compounding_shown.png" class="img-fluid " alt="">
-                                </div>
-                            </p>
-                            <p>The interest paid at the end of year one then earns interest in year two. That's why the second interest payment ($11) is higher than the first ($10).</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</button>
-                        <button type="button" class="continue btn">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">4</div>
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>In the basic form of the equation, we made an assumption about interest. Use this example for our equation:</p>
+                        <p class="question">"How much money would you have in 1 year if you invested $100 at a rate of 10%?"</p>
+                        <p>This results in $110. After two years, we calculate the investment would grow to $121. The timeline of events looks like this:
+                            <div class="bottom-space">
+                                <img src="./images/tvm2_annual_interest_timeline.png" alt="" class="img-fluid ">
+                            </div>
+                        </p>
+                        <p>The basic equation assumes that interest is compounded annually. In other words, interest is paid at the end of each rather than as one lump sum at the end of the 2-year term.
+                            <div class="bottom-space">
+                                <img src="./images/tvm2_annual_interest_timeline_compounding_shown.png" class="img-fluid " alt="">
+                            </div>
+                        </p>
+                        <p>The interest paid at the end of year one then earns interest in year two. That's why the second interest payment ($11) is higher than the first ($10).</p>
                     </div>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number"></div>
+                </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="compounding-3.html">Back</a>
+                    <a type="button" class="btn" href="compounding-5.html">Continue</a>
+                </div>
+            </div>
+        </div>
 
 
     </div> <!--  end of container -->
@@ -69,7 +70,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm2-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
