--- a/compounding/compounding-8.html
+++ b/compounding/compounding-8.html
@@ -11,69 +11,72 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Part 2: Compound Interest</title>
+    <title>TVM - Compounding</title>
 </head>
 
 <body>
     <div class="container-fluid">
-       
 
-            <!---------------- SLIDE 8 - content ******************* -->
-            <div id="slide8" class="slide exercise-slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: Compound Interest</h2>
-                        <h3 class="secondary-title">Adding Compounding Interest to the TVM Equation</h3>
-                    </div>
+
+        <!---------------- SLIDE 8 - content ******************* -->
+        <div id="" class="slide exercise-slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: Compound Interest</h2>
+                    <!-- <h3 class="secondary-title">Adding Compounding Interest to the TVM Equation</h3> -->
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <h4>Exercise 1: Figure Compounding Interest</h4>
-                            <p class="question">How much would you have at the end of a year if you invested $100 at 10% compounded semi-annually?</p>
-                            <div>
-                                <form action="">
+            </div>
+            <nav class="row">
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <h4>Exercise 1: Figure Compounding Interest</h4>
+                        <p class="question">How much would you have at the end of a year if you invested $100 at 10% compounded semi-annually?</p>
+                        <div>
+                            <form action="">
 
-                                    <div class="bottom-space">
-                                        <label>A. </label>
-                                        <input id="a-timeline" type="radio" name="timeline" value="a">
-                                        <img src="./images/choose_a_timeline_a.png" class="img-fluid " alt=""><br>
-                                    </div>
+                                <div class="bottom-space">
+                                    <label>A. </label>
+                                    <input id="a-timeline" type="radio" name="timeline" value="a">
+                                    <img src="./images/choose_a_timeline_a.png" class="img-fluid " alt=""><br>
+                                </div>
 
-                                    <div class="bottom-space">
-                                        <label>B. </label>
-                                        <input id="b-timeline" type="radio" name="timeline" value="b">
-                                        <img src="./images/choose_a_timeline_b.png" class="img-fluid " alt=""><br>
-                                    </div>
+                                <div class="bottom-space">
+                                    <label>B. </label>
+                                    <input id="b-timeline" type="radio" name="timeline" value="b">
+                                    <img src="./images/choose_a_timeline_b.png" class="img-fluid " alt=""><br>
+                                </div>
 
-                                    <div class="bottom-space">
-                                        <label>C. </label>
-                                        <input id="c-timeline" type="radio" name="timeline" value="c">
-                                        <img src="./images/choose_a_timeline_c.png" class="img-fluid " alt=""><br>
-                                    </div>
+                                <div class="bottom-space">
+                                    <label>C. </label>
+                                    <input id="c-timeline" type="radio" name="timeline" value="c">
+                                    <img src="./images/choose_a_timeline_c.png" class="img-fluid " alt=""><br>
+                                </div>
 
-                                </form>
-                                <button onclick="timeLine()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <div class="answer" id="semi-ans"></div>
+                            </form>
+                            <button onclick="timeLine()" type="button" class="btn calculate-btn">Submit</button>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="back btn">Back</a>
-                            <button type="button" class="continue btn">Continue</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">8</div>
+                        <div class="answer" id="semi-ans"></div>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number"></div>
+                </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="compounding-7.html">Back</a>
+                    <a type="button" class="btn" href="compounding-9.html">Continue</a>
+                </div>
+            </div>
+        </div>
 
 
-            
     </div> <!--  end of container -->
 
 
@@ -82,7 +85,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm2-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
